# robotx-simulation

./: README.md
livox_laser_simulation/: CMakeLists.txt
livox_laser_simulation/launch/: livox_simulation.launch
livox_laser_simulation/rviz/: livox_simulation.rviz
livox_laser_simulation/src/: livox_points_plugin.cpp
livox_laser_simulation/urdf/: livox_avia.xacro  livox_horizon.xacro  livox_mid40.xacro  livox_mid70.xacro  livox_tele.xacro  standardrobots_oasis300.xacro
object_gazebo/: CMakeLists.txt  package.xml  read.md
object_gazebo/config/: dump.yaml  route.yaml
object_gazebo/launch/: shipping_simulation.launch
object_gazebo/scripts/: generate_move.py
vrx/vrx_gazebo/: CMakeLists.txt  package.xml
vrx/vrx_gazebo/launch/: livox_simulation.launch  shipping_simulation.launch  usv_keymodelstate.launch  vrx.launch
vrx/vrx_gazebo/models/ship/mesh/: IPAC005_flat2.DAE  ipac005_double.DAE  war_ship_5.DAE
vrx/vrx_gazebo/nodes/: twist2modelstate.py
vrx/wamv_gazebo/: CMakeLists.txt  package.xml
vrx/wamv_gazebo/config/: rviz_vrx.rviz
vrx/wamv_gazebo/urdf/: macros.xacro  wamv_gazebo.urdf.xacro
vrx/wamv_gazebo/urdf/components/: livox_lidar.xacro  wamv_camera.xacro
vrx/wamv_gazebo/urdf/ipacship/: hzy_single_flat.urdf.xacro  ipac005_double.urdf.xacro
vrx/wamv_gazebo/urdf/warship/: ship20.xacro  war_ship.xacro  war_ship_black.xacro  war_ship_blue.xacro  war_ship_gray.xacro  war_ship_green.xacro  war_ship_red.xacro  war_ship_white.xacro  war_ship_yellow.xacro
